
  * 1.17
  * pp=sample was bust unless stacktrace was installed

10-September-2012 - Sam

  * 1.19
  * fix compat issue with 1.8.7

12-September-2012 - Sam

  * 1.20
  * Added pp=profile-gc , it allows you to profile the GC in Ruby 1.9.3

17-September-2012
  * 1.21
  * New MemchacedStore
  * Rails 4 support

17-September-2012
  * Allow rack-mini-profiler to be sourced from github
  * Extracted the pp=profile-gc-time out, the object space profiler needs to disable gc

20-September-2012
  * 1.22
  * Fix permission issue in the gem

8-April-2013
  * 1.24
  * Flame Graph Support see: http://samsaffron.com/archive/2013/03/19/flame-graphs-in-ruby-miniprofiler
  * Fix file retention leak in file_store
  * New toggle_shortcut and start_hidden options
  * Fix for AngularJS support and MooTools
  * More robust gc profiling
  * Mongoid support
  * Fix for html5 implicit body tags
  * script tag initialized via data-attributes
  * new - Rack::MiniProfiler.counter counter_name {}
  * Allow usage of existing jQuery if its already loaded
  * Fix pp=enable
  * 1.8.7 support ... grrr
  * Net:HTTP profiling
  * pre authorize to run in all non development? and production? modes

8-April-2013
  * 1.25
  * Missed flamegraph.html from build

11-April-2013
  * 1.26
  * (minor) allow Rack::MiniProfilerRails.initialize!(Rails.application), for post config intialization

26-June-2013
  * 1.27
  * Disable global ajax handlers on MP requests @JP
  * Add Rack::MiniProfiler.config.backtrace_threshold_ms
  * jQuery 2.0 support

18-July-2013
  * 1.28
	* diagnostics in abstract storage was raising not implemented killing
	?pp=env and others
  * SOLR xml unescaped by mistake

20-August-2013
  * 1.29
  * Bugfix: SOLR patching had an incorrect monkey patch
  * Implemented exception tracing using TracePoint see pp=trace-exceptions

30-August-2013

  * 1.30
  * Feature: Added Rack::MiniProfiler.counter_method(klass,name) for injecting counters
  * Bug: Counters were not shifting the table correctly
