@@ -18,7 +18,7 @@ require 'mini_profiler/profiling_methods'
 require 'mini_profiler/context'
 require 'mini_profiler/client_settings'
 require 'mini_profiler/gc_profiler'
-require 'mini_profiler/flame_graph'
+require 'mini_profiler/gc_profiler_ruby_head' if Gem::Version.new('2.1.0') <= Gem::Version.new(RUBY_VERSION)
 
 module Rack
 
@@ -237,35 +237,7 @@ module Rack
         current.skip_backtrace = true
       end
 
-      done_sampling = false
-      quit_sampler = false
-      backtraces = nil
-
-      if query_string =~ /pp=sample/ || query_string =~ /pp=flamegraph/
-        current.measure = false
-        skip_frames = 0
-        backtraces = []
-        t = Thread.current
-
-        Thread.new {
-          # new in Ruby 2.0
-          has_backtrace_locations = t.respond_to?(:backtrace_locations)
-          begin
-            i = 10000 # for sanity never grab more than 10k samples
-            while i > 0
-              break if done_sampling
-              i -= 1
-              backtraces << (has_backtrace_locations ? t.backtrace_locations : t.backtrace)
-
-              # On my machine using Ruby 2.0 this give me excellent fidelity of stack trace per 1.2ms
-              #   with this fidelity analysis becomes very powerful
-              sleep 0.0005
-            end
-          ensure
-            quit_sampler = true
-          end
-        }
-      end
+      flamegraph = nil
 
       trace_exceptions = query_string =~ /pp=trace-exceptions/ && defined? TracePoint
       status, headers, body, exceptions,trace = nil
@@ -287,15 +259,17 @@ module Rack
         env['HTTP_IF_MODIFIED_SINCE'] = ''
         env['HTTP_IF_NONE_MATCH'] = ''
 
-        status,headers,body = @app.call(env)
+        if query_string =~ /pp=flamegraph/
+          # 0.5 means attempt to collect a sample each 0.5 secs
+          flamegraph = Flamegraph.generate(0.5) do
+            status,headers,body = @app.call(env)
+          end
+        else
+          status,headers,body = @app.call(env)
+        end
         client_settings.write!(headers)
       ensure
         trace.disable if trace
-
-        if backtraces
-          done_sampling = true
-          sleep 0.001 until quit_sampler
-        end
       end
 
       skip_it = current.discard
@@ -331,13 +305,9 @@ module Rack
       page_struct['User'] = user(env)
       page_struct['Root'].record_time((Time.now - start) * 1000)
 
-      if backtraces
+      if flamegraph
         body.close if body.respond_to? :close
-        if query_string =~ /pp=sample/
-          return analyze(backtraces, page_struct)
-        else
-          return flame_graph(backtraces, page_struct)
-        end
+        return self.flamegraph(graph)
       end
 
 
@@ -471,12 +441,11 @@ module Rack
   pp=no-backtrace #{"(*) " if client_settings.backtrace_none?}: don't collect stack traces from all the SQL executed (sticky, use pp=normal-backtrace to enable)
   pp=normal-backtrace #{"(*) " if client_settings.backtrace_default?}: collect stack traces from all the SQL executed and filter normally
   pp=full-backtrace #{"(*) " if client_settings.backtrace_full?}: enable full backtraces for SQL executed (use pp=normal-backtrace to disable)
-  pp=sample : sample stack traces and return a report isolating heavy usage (works best on Ruby 2.0)
   pp=disable : disable profiling for this session
   pp=enable : enable profiling for this session (if previously disabled)
   pp=profile-gc: perform gc profiling on this request, analyzes ObjectSpace generated by request (ruby 1.9.3 only)
   pp=profile-gc-time: perform built-in gc profiling on this request (ruby 1.9.3 only)
-  pp=flamegraph: works best on Ruby 2.0, a graph representing sampled activity.
+  pp=flamegraph: works best on Ruby 2.0, a graph representing sampled activity (requires the flamegraph gem).
   pp=trace-exceptions: requires Ruby 2.0, will return all the spots where your application raises execptions
 "
 
@@ -484,49 +453,9 @@ module Rack
       [200, headers, [body]]
     end
 
-    def flame_graph(traces, page_struct)
-      graph = FlameGraph.new(traces)
-      data = graph.graph_data
-
+    def flamegraph(graph)
       headers = {'Content-Type' => 'text/html'}
-
-      body = IO.read(::File.expand_path('../html/flamegraph.html', ::File.dirname(__FILE__)))
-      body.gsub!("/*DATA*/", ::JSON.generate(data));
-
-      [200, headers, [body]]
-    end
-
-    def analyze(traces, page_struct)
-      headers = {'Content-Type' => 'text/plain'}
-      body = "Collected: #{traces.count} stack traces. Duration(ms): #{page_struct.duration_ms}"
-
-      seen = {}
-      fulldump = ""
-      traces.each do |trace|
-        fulldump << "\n\n"
-        distinct = {}
-        trace.each do |frame|
-          frame = frame.to_s unless String === frame
-          unless distinct[frame]
-            distinct[frame] = true
-            seen[frame] ||= 0
-            seen[frame] += 1
-          end
-          fulldump << frame << "\n"
-        end
-      end
-
-      body << "\n\nStack Trace Analysis\n"
-      seen.to_a.sort{|x,y| y[1] <=> x[1]}.each do |name, count|
-        if count > traces.count / 10
-          body << "#{name} x #{count}\n"
-        end
-      end
-
-      body << "\n\n\nRaw traces \n"
-      body << fulldump
-
-      [200, headers, [body]]
+      [200, headers, [graph]]
     end
 
     def ids_json(env)
